--- a/Main/SEToolbox/SEToolbox/Views/ControlInventory.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlInventory.xaml
@@ -3,8 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:converters="clr-namespace:SEToolbox.Converters"
              xmlns:services="clr-namespace:SEToolbox.Services"
+             xmlns:controls="clr-namespace:SEToolbox.Controls"
+             xmlns:commands="clr-namespace:SEToolbox.Services"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              services:DialogService.IsRegisteredView="True">
@@ -37,7 +40,7 @@
             <Separator HorizontalAlignment="Left" Width="4"/>
         </Menu>
         <Grid>
-            <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Items, UpdateSourceTrigger=PropertyChanged}" CanUserDeleteRows="False" CanUserAddRows="False" SelectedItem="{Binding SelectedRow}" CanUserSortColumns="False">
+            <controls:MyDataGrid AutoGenerateColumns="False" ItemsSource="{Binding Items, UpdateSourceTrigger=PropertyChanged}" CanUserDeleteRows="False" CanUserAddRows="False" SelectedItem="{Binding SelectedRow}" CanUserSortColumns="False">
                 <DataGrid.InputBindings>
                     <KeyBinding Key="Insert" Command="{Binding AddItemCommand}" />
                     <KeyBinding Key="Delete" Command="{Binding DeleteItemCommand}" />
@@ -55,7 +58,7 @@
                     <DataGridTextColumn Header="Volume (L)" Binding="{Binding Volume, StringFormat='{}{0:#,###0.000}'}" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Amount" Binding="{Binding Count}" IsReadOnly="True"/>
                 </DataGrid.Columns>
-            </DataGrid>
+            </controls:MyDataGrid>
         </Grid>
     </DockPanel>
 </UserControl>
