--- a/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
@@ -75,6 +75,7 @@
                         <Grid Grid.Row="7" Grid.Column="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="80"/>
+                                <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
                             <TextBox VerticalAlignment="Center" Style="{StaticResource textBoxInError}">
@@ -86,12 +87,14 @@
                                     </Binding>
                                 </TextBox.Text>
                             </TextBox>
-                            <Slider Grid.Column="1" Value="{Binding Health}" Minimum="0" Maximum="100" SmallChange="1" LargeChange="10" />
+                            <Image Grid.Column="1" Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=medical_bag}" />
+                            <Slider Grid.Column="2" Value="{Binding Health}" Minimum="0" Maximum="100" SmallChange="1" LargeChange="10" />
                         </Grid>
                         <Label Grid.Column="0" Grid.Row="8" Content="Battery:"/>
                         <Grid Grid.Row="8" Grid.Column="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="80"/>
+                                <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
                             <TextBox VerticalAlignment="Center" Style="{StaticResource textBoxInError}">
@@ -103,7 +106,8 @@
                                     </Binding>
                                 </TextBox.Text>
                             </TextBox>
-                            <Slider Grid.Column="1" Value="{Binding BatteryCapacity}" Minimum="0" Maximum="1" SmallChange=".01" LargeChange=".1"/>
+                            <Image Grid.Column="1" Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=battery}" />
+                            <Slider Grid.Column="2" Value="{Binding BatteryCapacity}" Minimum="0" Maximum="1" SmallChange=".01" LargeChange=".1"/>
                         </Grid>
                         <Separator Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2"/>
                         <Label Grid.Column="0" Grid.Row="10" Content="Pilot:"/>
