--- a/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
@@ -3,10 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:converters="clr-namespace:SEToolbox.Converters"
+             xmlns:commands="clr-namespace:SEToolbox.Services"
              xmlns:views="clr-namespace:SEToolbox.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="400" d:DesignWidth="300">
     <UserControl.Resources>
         <converters:ResouceToImageConverter x:Key="ResouceToImageConverter"/>
         <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
@@ -70,7 +72,6 @@
                         <CheckBox Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding Dampeners, Mode=TwoWay}" />
                         <Label Grid.Column="0" Grid.Row="6" Content="Position:"/>
                         <views:ControlPosition Grid.Column="1" Grid.Row="6" IsEnabled="{Binding IsPilot, Converter={StaticResource InverseBooleanConverter}}" />
-
                         <Label Grid.Column="0" Grid.Row="7" Content="Health:"/>
                         <Grid Grid.Row="7" Grid.Column="1">
                             <Grid.ColumnDefinitions>
@@ -109,13 +110,32 @@
                             <Image Grid.Column="1" Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=battery}" />
                             <Slider Grid.Column="2" Value="{Binding BatteryCapacity}" Minimum="0" Maximum="1" SmallChange=".01" LargeChange=".1"/>
                         </Grid>
-                        <Separator Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2"/>
-                        <Label Grid.Column="0" Grid.Row="10" Content="Pilot:"/>
-                        <TextBlock Grid.Row="10" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPilot}" />
-                        <Label Grid.Column="0" Grid.Row="11" Content="Player:"/>
-                        <TextBlock Grid.Row="11" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPlayer}" />
-                        <Label Grid.Column="0" Grid.Row="12" Content="Speed:"/>
-                        <TextBlock Grid.Row="12" Grid.Column="1" VerticalAlignment="Center" Text="{Binding LinearVelocity, StringFormat='{}{0:#,###0.000} m/s'}" />
+                        <Button Grid.Column="0" Grid.Row="9" Content="Speed:" HorizontalAlignment="Left">
+                            <i:Interaction.Behaviors>
+                                <commands:ButtonDropDownMenuBehavior />
+                            </i:Interaction.Behaviors>
+                            <Button.ContextMenu>
+                                <ContextMenu HorizontalAlignment="Right">
+                                    <MenuItem Header="Reset Speed" Command="{Binding ResetVelocityCommand}">
+                                        <MenuItem.Icon>
+                                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=media_stop}" />
+                                        </MenuItem.Icon>
+                                    </MenuItem>
+                                    <MenuItem Header="Reverse Speed" Command="{Binding ReverseVelocityCommand}">
+                                        <MenuItem.Icon>
+                                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=navigate_left2}" />
+                                        </MenuItem.Icon>
+                                    </MenuItem>
+                                </ContextMenu>
+                            </Button.ContextMenu>
+                        </Button>
+                        <TextBlock Grid.Row="9" Grid.Column="1" VerticalAlignment="Center" Text="{Binding LinearVelocity, StringFormat='{}{0:#,###0.000} m/s'}" />
+
+                        <Separator Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2"/>
+                        <Label Grid.Column="0" Grid.Row="11" Content="Pilot:"/>
+                        <TextBlock Grid.Row="11" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPilot}" />
+                        <Label Grid.Column="0" Grid.Row="12" Content="Player:"/>
+                        <TextBlock Grid.Row="12" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPlayer}" />
                         <Label Grid.Column="0" Grid.Row="13" Content="Distance:"/>
                         <TextBlock Grid.Row="13" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
                     </Grid>
